# connectedhomeip

./: .gitmodules  BUILD.gn  README.md  gn_build.sh
.github/: boring-cyborg.yml  labeler.yml
config/nrf5/toolchain/: BUILD.gn
docs/: VSCODE_DEVELOPMENT.md
examples/arduino-bind/nrf5/: BUILD.gn  args.gni  publish_chip.sh
examples/arduino-bind/nrf5/main/: AppTask.cpp  main.cpp
examples/arduino-bind/nrf5/main/include/: FreeRTOSConfig.h  app_config.h
examples/lighting-app/nrf5/: BUILD.gn  args.gni
examples/lighting-app/nrf5/main/: AppTask.cpp  LightingCLI.cpp  LightingManager.cpp  ZclCallbacks.cpp  main.cpp
examples/lighting-app/nrf5/main/include/: AppTask.h  LightingManager.h
examples/lock-app/nrf5/: BUILD.gn
examples/lock-app/nrf5/main/: AppTask.cpp  BoltLockManager.cpp  ZclCallbacks.cpp  main.cpp
examples/lock-app/nrf5/main/include/: AppTask.h  app_config.h
examples/pigweed-app/nrf5/: BUILD.gn  args.gni
examples/platform/nrf5/app/: Service.cpp  chipinit.cpp
examples/platform/nrf5/app/project_include/: OpenThreadConfig.h
examples/platform/nrf5/app/support/: FreeRTOSApplicationHooks.c
examples/platform/nrf5/pw_sys_io/: BUILD.gn  sys_io_baremetal_nrf528xx.cc
examples/platform/nrf5/sdk/: BUILD.gn
examples/platform/nrf5/util/: LEDWidget.cpp  ThreadUtil.cpp
examples/platform/nrf528xx/app/: chipinit.cpp
examples/platform/nrfconnect/pw_sys_io/: sys_io_nrfconnect.cc
examples/shell/nrf52/: BUILD.gn  args.gni  main.cpp
examples/shell/nrf52/include/: CHIPProjectConfig.h
integrations/docker/images/chip-build-nrf-platform/: Dockerfile
integrations/docker/images/chip-build-vscode/: Dockerfile
scripts/: requirements.txt
scripts/examples/: gn_nrf_example.sh
scripts/helpers/: update_compile_commands.sh
src/crypto/: BUILD.gn  crypto.gni
src/inet/: DNSResolver.cpp
src/lib/support/: Span.h
src/lwip/: BUILD.gn
src/lwip/qpg6100/: lwipopts.h
src/platform/: BUILD.gn  LwIPEventSupport.cpp  device.gni
src/platform/Windows/: .BUILD.gn.un~  BUILD.gn  BUILD.gn~
src/platform/nRF5/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  CHIPDevicePlatformEvent.h  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConnectivityManagerImpl.cpp  GroupKeyStoreImpl.cpp  KeyValueStoreManagerImpl.cpp  Logging.cpp  PlatformManagerImpl.cpp  SystemPlatformConfig.h  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h  args.gni  nRF5Config.cpp  nRF5Utils.cpp  nRF5Utils.h
