# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/examples/platform/nrf5/args.gni")

# SDK target. This is overriden to add our SDK app_config.h & defines.
nrf5_sdk_target = get_label_info(":sdk", "label_no_toolchain")

openthread_project_core_config_file = rebase_path("main/include/OpenThreadConfig.h")
chip_mdns = "minimal"
openthread_enable_core_config_args = true
chip_inet_config_enable_raw_endpoint = true
chip_inet_config_enable_async_dns_sockets = true

#openthread_config_log_output = "platform_defined"

#openthread_config_border_agent_enable = true
#openthread_config_child_supervision_enable = true
#openthread_config_coap_api_enable = true
#openthread_config_coap_secure_api_enable = true
#openthread_config_commissioner_enable = true
#openthread_config_dhcp6_client_enable = true
#openthread_config_dhcp6_server_enable = true
#openthread_config_diag_enable = true
#openthread_config_dns_client_enable = true
#openthread_config_ecdsa_enable = true
#openthread_config_heap_external_enable = true
#openthread_config_ip6_slaac_enable = true
#openthread_config_jam_detection_enable = true
#openthread_config_joiner_enable = true
#openthread_config_link_raw_enable = true
#openthread_config_sntp_client_enable = true
#openthread_config_thread_version = "1.1"
#openthread_config_tmf_network_diag_mtd_enable = true
#openthread_config_udp_forward_enable = true

