# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/src/platform/device.gni")

assert(chip_device_platform == "nrf5")

import("//build_overrides/nrf5_sdk.gni")

if (chip_enable_openthread) {
  import("//build_overrides/openthread.gni")
}

static_library("nRF5") {
  sources = [
    "../FreeRTOS/SystemTimeSupport.cpp",
    "BLEManagerImpl.cpp",
    "BLEManagerImpl.h",
    "CHIPDevicePlatformConfig.h",
    "CHIPDevicePlatformEvent.h",
    "ConfigurationManagerImpl.cpp",
    "ConfigurationManagerImpl.h",
    "ConnectivityManagerImpl.cpp",
    "ConnectivityManagerImpl.h",
    "DeviceNetworkProvisioningDelegateImpl.cpp",
    "DeviceNetworkProvisioningDelegateImpl.h",
    "nRF5Config.cpp",
    "nRF5Config.h",
    "KeyValueStoreManagerImpl.cpp",
    "KeyValueStoreManagerImpl.h",
    "Logging.cpp",
    #"NFCManagerImpl.cpp",
    #"NFCManagerImpl.h",
    "PlatformManagerImpl.cpp",
    "PlatformManagerImpl.h",
    #"SoftwareUpdateManagerImpl.h",
    #"ble_function_mux.c",
    "nRF5Utils.cpp",
    "nRF5Utils.h",
  ]

  deps = []

  public_deps = [ "${chip_root}/src/platform:platform_base" ]
  public_deps += [ "${nrf5_sdk_build_root}:nrf5_sdk" ]


  if (chip_enable_openthread) {
    sources += [
      "../OpenThread/OpenThreadUtils.cpp",
      "ThreadStackManagerImpl.cpp",
      "ThreadStackManagerImpl.h",
    ]

    public_deps += [
      "${chip_root}/third_party/openthread/platforms/nrf528xx:libnordicsemi_nrf52840_radio_driver_softdevice",
      "${chip_root}/third_party/openthread/platforms/nrf528xx:libopenthread-nrf52840-softdevice-sdk",
      "${openthread_root}:libopenthread-ftd",
    ]

    if (chip_mdns == "platform") {
      sources += [ "../OpenThread/MdnsImpl.cpp" ]
      deps += [ "${chip_root}/src/lib/mdns:platform_header" ]
    }
  }

  public_deps += [ "${chip_root}/src/crypto" ]
}
